--- a/src/styles/DetailPage.module.css
+++ b/src/styles/DetailPage.module.css
@@ -65,7 +65,8 @@
     gap: 24px;
 }
 
-@media (max-width: 1023px) {
+/* 태블릿 */
+@media (max-width: 745px) {
     .content {
         grid-template-columns: 1fr;
     }
