--- a/src/styles/DetailPage.module.css
+++ b/src/styles/DetailPage.module.css
@@ -41,13 +41,6 @@
     cursor: text;
 }
 
-/* 이름 편집 */
-.titleEdit {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-}
-
 .titleInput {
     width: min(560px, 90%);
     height: 36px;
@@ -70,6 +63,13 @@
     .content {
         grid-template-columns: 1fr;
     }
+}
+
+.imagePanel {
+  width: 588px;
+  max-width: 100%;
+  height: 311px;
+  display: flex;
 }
 
 .imageBox {
