--- a/src/styles/DetailPage.module.css
+++ b/src/styles/DetailPage.module.css
@@ -3,10 +3,10 @@
 }
 
 .inner {
-    max-width: 1100px;
+    max-width: 1200px;
+    padding: 10px;
     margin: 0 auto;
     display: grid;
-    gap: 24px;
 }
 
 /* 타이틀 바 */
@@ -16,11 +16,13 @@
     justify-content: center;
     gap: 12px;
     height: 56px;
-    padding: 0 16px;
+    margin-bottom:24px;
 
     border: 2px solid var(--slate-900);
     border-radius: 28px;
     background: #fff;
+    box-sizing: border-box;
+    min-width: 0; 
     transition: background-color .15s ease;
 }
 
@@ -39,6 +41,7 @@
     padding: 0 6px;
     color: var(--slate-900);
     cursor: text;
+    min-width: 0;
 }
 
 .titleInput {
@@ -54,19 +57,19 @@
 /* 데스크탑 => 태블릿 */
 .content {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: minmax(0,1fr) minmax(0,1fr);
     gap: 24px;
 }
 
 /* 태블릿 */
 @media (max-width: 745px) {
     .content {
-        grid-template-columns: 1fr;
+        grid-template-columns: minmax(0,1fr);
     }
 }
 
 .imagePanel {
-  width: 588px;
+  width: 100%;
   max-width: 100%;
   height: 311px;
   display: flex;
